add zh-CN translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -37,6 +37,7 @@
   "Downloading folder, refresh page to cancel": "Downloading folder, refresh page to cancel",
   "Downloading selected files, refresh page to cancel": "Downloading selected files, refresh page to cancel",
   "Downloading selected files...": "Downloading selected files...",
+  "Download the file with the stream proxied through Cloudflare Workers": "Download the file with the stream proxied through Cloudflare Workers",
   "Email": "Email",
   "Enter Password": "Enter Password",
   "Error storing the token": "Error storing the token",
@@ -82,6 +83,7 @@
   "Open URL{{url}}": "Open URL{{url}}",
   "Press <2>F12</2> and open devtools for more details, or seek help at <6>onedrive-vercel-index discussions</6>.": "Press <2>F12</2> and open devtools for more details, or seek help at <6>onedrive-vercel-index discussions</6>.",
   "Proceed to OAuth": "Proceed to OAuth",
+  "Proxy download": "Proxy download",
   "Requesting tokens": "Requesting tokens",
   "Restart": "Restart",
   "revisit home and do a hard refresh.": "revisit home and do a hard refresh.",
