--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -35,6 +35,7 @@
   "Downloading folder, refresh page to cancel": "下载文件夹中，刷新页面以取消",
   "Downloading selected files, refresh page to cancel": "下载选定文件中，刷新页面以取消",
   "Downloading selected files...": "下载选定文件中…",
+  "Download the file with the stream proxied through Cloudflare Workers": "通过 Cloudflare Workers 代理下载文件",
   "Email": "电子邮件",
   "Enter Password": "输入密码",
   "Error storing the token": "存储 token 时出错",
@@ -78,6 +79,7 @@
   "Open URL{{url}}": "打开 URL{{url}}",
   "Press <2>F12</2> and open devtools for more details, or seek help at <6>onedrive-vercel-index discussions</6>.": "请按下 <2>F12</2> 来打开开发者工具窗口以获取详细信息，或是到 <6>onedrive-vercel-index 社区讨论</6> 处寻求帮助。",
   "Proceed to OAuth": "继续进行 OAuth",
+  "Proxy download": "代理下载",
   "Requesting tokens": "正在获取 token",
   "Restart": "重新开始",
   "revisit home and do a hard refresh.": "重新访问首页并刷新浏览器",
