--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -120,5 +120,6 @@
   "Welcome to your new onedrive-vercel-index 🎉": "Welcome to your new onedrive-vercel-index 🎉",
   "What is this?": "What is this?",
   "Where is the auth code? Did you follow step 2 you silly donut?": "Where is the auth code? Did you follow step 2 you silly donut?",
-  "Whoops, looks like we got a problem: {{error}}.": "Whoops, looks like we got a problem: {{error}}."
+  "Whoops, looks like we got a problem: {{error}}.": "Whoops, looks like we got a problem: {{error}}.",
+  "Download the file through Cloudflare Serverless proxy.": "Download the file through Cloudflare Serverless proxy."
 }
