--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -116,5 +116,6 @@
   "Welcome to your new onedrive-vercel-index 🎉": "欢迎来到你崭新的 onedrive-vercel-index 🎉",
   "What is this?": "这是什么？",
   "Where is the auth code? Did you follow step 2 you silly donut?": "授权码呢？你遵守了第 2 步吗？你这个傻瓜甜甜圈！o(￣ヘ￣o＃)",
-  "Whoops, looks like we got a problem: {{error}}.": "Whoops，看来我们遇到了一个问题：{{error}}"
+  "Whoops, looks like we got a problem: {{error}}.": "Whoops，看来我们遇到了一个问题：{{error}}",
+  "Download the file through Cloudflare Serverless proxy.": "通过 Cloudflare Serverless 代理下载文件。"
 }
